samples/_failures_safe/1761594699_371663_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8930c1f.c: In function ‘main’:
./samples/SAFE/__tmp_b8930c1f.c:178:33: error: expected ‘;’ at end of input
  178 |         case STATE_READY: printf
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_b8930c1f.c:178:9: error: expected declaration or statement at end of input
  178 |         case STATE_READY: printf
      |         ^~~~
./samples/SAFE/__tmp_b8930c1f.c:178:9: error: expected declaration or statement at end of input
